--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background: #EFEFBB;
-	background: linear-gradient(to right, rgb(197, 230, 236), rgb(239, 187, 230));
+	background: linear-gradient(to right, rgb(188, 232, 240), rgb(216, 163, 207));
 	color: white;
 	margin: 0;
 	font-family: rubik;
@@ -18,8 +18,8 @@ h1 {
 
 .pokedex {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	grid-gap: 20px;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-gap: 10px;
 	padding-inline-start: 0;
 }
 
@@ -28,7 +28,6 @@ h1 {
 	padding: 40px;
 	color: #222;
 	text-align: center;
-	border-radius: 20px;
 	position: relative;
 }
 
@@ -37,7 +36,7 @@ h1 {
   display: block;
   width: 50%;
   height: 45%;
-  border-radius: 100%;
+  border-radius: 10%;
   background-color: #fff;
   opacity: .7;
   position: absolute;
@@ -45,69 +44,7 @@ h1 {
   left: 25%;
 }
 
-.steel {
-	background-color: #f4f4f4;
-}
 
-.fire {
-	background-color: #FDDFDF;
-}
-
-.grass {
-	background-color: #DEFDE0;
-}
-
-.electric {
-	background-color: #FCF7DE;
-}
-
-.water, .ice {
-	background-color: #DEF3FD;
-}
-
-.ground {
-	background-color: #f4e7da;
-}
-
-.rock {
-	background-color: #d5d5d4;
-}
-
-.fairy {
-	background-color: #fceaff;
-}
-
-.poison {
-	background-color: #98d7a5;
-}
-
-.bug {
-	background-color: #f8d5a3;
-}
-
-.dragon {
-	background-color: #97b3e6;
-}
-
-.psychic {
-	background-color: #eaeda1;
-}
-
-.flying {
-	background-color: #F5F5F5;
-}
-
-.fighting {
-	background-color: #E6E0D4;
-}
-
-.normal {
-	background-color: #F5F5F5;
-}
-
-.card:hover {
-	animation: bounce 0.5s linear;
-}
 
 .card-title {
 	text-transform: capitalize;
